# binary_ninja_mcp

./: .gitignore  AGENTS.md  BINARY_MANAGEMENT_REPORT.md  BINARY_VIEW_INJECTION_ANALYSIS.md  CLAUDE.md  CLI_BROKEN_COMMANDS.md  CLI_COMMAND_RANKING.md  CLI_COMMAND_RANKING_SHORT.md  CLI_ISSUES_REPORT.md  CLI_README.md  FINAL_TEST_RESULTS.md  MCP_COMMANDS_TEST_REPORT.md  PYTHON_API_IMPROVEMENT_OPTIONS.md  PYTHON_CLI_IMPROVEMENTS.md  PYTHON_CLI_VERIFICATION.md  PYTHON_EXECUTION_OPTIONS.md  PYTHON_EXECUTOR_SUMMARY.md  PYTHON_EXECUTOR_TEST_REPORT.md  PYTHON_V2_FINAL_REPORT.md  PYTHON_V2_IMPLEMENTATION_REPORT.md  README.md  __init__.py  cli.py  log_listener_options.md  plugin.json  pyproject.toml  pytest.ini  test_all_commands.py  test_automation_logic.py  test_binary_operations_target_ids_unit.py  test_binja_restart_unit.py  test_cli_auto_errors_unit.py  test_cli_filename_target.py  test_cli_open_item6_unit.py  test_cli_strict_target_unit.py  test_console_capture_adapter_unit.py  test_console_debug.py  test_endpoint_api_integration.py  test_log_capture.py  test_python_updates.py  (+4 more)
.github/workflows/: integration-binja.yml  lint-and-unit.yml  ruff.yml
bridge/: binja_mcp_bridge.py  requirements.txt
docs/: PYTHON_CLI_GUIDE.md  PYTHON_EXECUTOR.md
examples/: analyze_binary.py  cli_python_demo.sh  python_integration.py  simple_test.py  test_python.py  test_python_executor.py
plugin/: __init__.py
scripts/: README.md  binja-cli.py  binja-restart.py  check_unicode_safety.py  setup_claude_desktop.py
shared/: __init__.py  api_versions.py  endpoints_manifest.py
(+31 files in other folders)
