[project]
name = "binary-ninja-mcp"
version = "0.2.7"
description = "Binary Ninja plugin + MCP bridge for LLM integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.49.0",
  "mcp[cli]>=1.6.0",
  "plumbum>=1.8.0",
  "requests>=2.32.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["scripts/binaryninja-api"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
