[project]
name = "binary-ninja-mcp"
version = "0.2.7"
description = "Binary Ninja plugin and CLI for LLM-assisted binary analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "plumbum>=1.8.0",
  "requests>=2.32.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["scripts/binaryninja-api"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
